<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context=".MainActivity">



        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="19dp"
                    android:background="@drawable/flag" />

                <TextView
                    android:id="@+id/kayanyazi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kayan_yazi"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:scrollHorizontally="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal" />


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:layout_marginTop="2dp"
                android:text="@string/covid_19"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/detay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/gilroy_light"
                            android:text="@string/vaka"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/txtInfected"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gilroy_bold"
                            android:text="@string/veri"
                            android:textAlignment="center"
                            android:textColor="@color/colorRed"
                            android:textSize="20sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        app:cardBackgroundColor="@color/colorWhite"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:fontFamily="@font/gilroy_light"
                                android:text="@string/iyilesenn"
                                android:textAlignment="center"
                                android:textColor="@color/colorBlack"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/txtRecoverd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/gilroy_bold"
                                android:text="@string/veri"
                                android:textAlignment="center"
                                android:textColor="@color/colorGreen"
                                android:textSize="20sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        app:cardBackgroundColor="@color/colorWhite"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:fontFamily="@font/gilroy_light"
                                android:text="@string/olum"
                                android:textAlignment="center"
                                android:textColor="@color/colorBlack"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/txtDeceased"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/gilroy_bold"
                                android:text="@string/veri"
                                android:textAlignment="center"
                                android:textColor="@color/colorGray"
                                android:textSize="20sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/semptomlar"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtViewSymptoms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/hepsini_g_ster"
                    android:textColor="@color/colorGray"
                    android:textSize="15sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:rotationX="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_semptomlar" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:rotationX="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/gilroy_bold"
                            android:text="@string/covid_hakkinda_daha_fazla"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/btnKnowMore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/colorDarkBlue"
                            android:fontFamily="@font/gilroy_bold"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:text="@string/daha_fazla"
                            android:textAllCaps="false"
                            android:textColor="@color/colorWhite"
                            android:textSize="12sp" />
                    </LinearLayout>


                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/covid_person"
                        android:contentDescription="@string/hasta_kadin" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/onlemler"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtViewOnlemler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/hepsini_g_ster"
                    android:textColor="@color/colorGray"
                    android:textSize="15sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPrecautions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:rotationX="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="6"
                tools:listitem="@layout/item_onlemler" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>