<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorLightBlue"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightBlue"
        tools:context=".DetayliVeri">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/covid_19_detayl_veri"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="22sp" />

            <LinearLayout
                android:id="@+id/detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/gilroy_light"
                            android:text="@string/toplam_test"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="21sp" />

                        <TextView
                            android:id="@+id/tests"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gilroy_bold"
                            android:text="@string/veri"
                            android:textAlignment="center"
                            android:textColor="@color/colorDarkGray"
                            android:textSize="20sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/gilroy_light"
                            android:text="@string/aktif_vaka"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/aktifvaka"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gilroy_bold"
                            android:text="@string/veri"
                            android:textAlignment="center"
                            android:textColor="@color/teal_700"
                            android:textSize="20sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/gilroy_light"
                            android:text="@string/kr_t_k_vaka"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/kritikvaka"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gilroy_bold"
                            android:text="@string/veri"
                            android:textAlignment="center"
                            android:textColor="@color/colorRed"
                            android:textSize="20sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/gilroy_light"
                            android:text="@string/bugun_veri"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/bugunvaka"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gilroy_bold"
                            android:text="@string/veri"
                            android:textAlignment="center"
                            android:textColor="@color/colorDarkGray"
                            android:textSize="20sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/gilroy_light"
                            android:text="@string/bugun_iyilesen"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/buguniyilesen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gilroy_bold"
                            android:text="@string/veri"
                            android:textAlignment="center"
                            android:textColor="@color/colorGreen"
                            android:textSize="20sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/gilroy_light"
                            android:text="@string/bugun_olum"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/bugunolum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gilroy_bold"
                            android:text="@string/veri"
                            android:textAlignment="center"
                            android:textColor="@color/colorDarkGray"
                            android:textSize="20sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/gilroy_light"
                            android:text="@string/mn_test"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/pertest"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gilroy_bold"
                            android:text="@string/veri"
                            android:textAlignment="center"
                            android:textColor="@color/teal_200"
                            android:textSize="20sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/gilroy_light"
                            android:text="@string/mn_vaka"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/pervaka"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gilroy_bold"
                            android:text="@string/veri"
                            android:textAlignment="center"
                            android:textColor="@color/colorRed"
                            android:textSize="20sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/gilroy_light"
                            android:text="@string/mn_olum"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/perolum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gilroy_bold"
                            android:text="@string/veri"
                            android:textAlignment="center"
                            android:textColor="@color/colorDarkGray"
                            android:textSize="20sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>










            </LinearLayout>


        </LinearLayout>






    </RelativeLayout>

</ScrollView>
